overlap fix

--- a/angular/src/app/profile/profile.component.css
+++ b/angular/src/app/profile/profile.component.css
@@ -172,15 +172,12 @@ nav{
 .posting{
   width: 65.7%;
   height: auto;
-  margin-top: 0%;
   margin-left: 23.2%;
 }
 
 .mat-card-image:first-child {
   border-radius: 50%;
-  margin-top: 10px;
-  border: white;
-  border-style: solid;
+  margin: 2%;
 }
 
 textarea.mat-input-element{
@@ -233,4 +230,10 @@ textarea.mat-input-element{
 .top-bio-section {
   width: 80%;
   margin-left: 6%;
+}
+.mat-card-content.mat-card-content.insidePost {
+  margin: 2%;
+}
+.mat-card-title:not(:first-child), .mat-card-subtitle:not(:first-child) {
+  margin: -1% 2% 2% 2%;
 }
